# edgeservice

./: CMakeLists.txt  README.md  build.sh
conf/: ai_service.json
proto/: edgeservice.proto
src/: main.cpp
src/grpc/: grpc_server.cpp  grpc_server.h
src/http/: http_server.cpp  http_server.h
src/inspect/: inspect_impl.cpp  inspect_impl.h
src/proto/: edgeservice.grpc.pb.cc  edgeservice.grpc.pb.h  edgeservice.pb.cc  edgeservice.pb.h
src/utils/: config_utils.cpp  config_utils.h  http_utils.h
